Revision history for perl module Remedi

{{$NEXT}}

0.065     2015-04-25 12:55:44+02:00 Europe/Berlin

    - Add log_level as parameter again after factoring out 

0.064     2015-04-24 23:07:57+02:00 Europe/Berlin

    - Factor logging out as a role
    - Add a script for creating thumbnails from TIFF files

0.063     2015-03-07 20:06:05+01:00 Europe/Berlin

    - Check multiple images in PDF reference files
    - Create thumbnails from reference files in PDF format

0.062     2015-02-16 13:38:33+01:00 Europe/Berlin

    - ScanGate jobfile is moved to ingest directory after creating METS  

0.061     2015-02-05 10:03:46+01:00 Europe/Berlin

    - New script to add georeferencing metadata to TIFF files according to the
      GeoTIFF standard

    - IOS logo files for TIFF format are added

0.060     2015-02-01 14:17:23+01:00 Europe/Berlin

    - A list of pages can be given to generate TIFFs for these pages 
      instead of PDFs as an option for digifooter. This is a requirement 
      for producing JPEG2000 files, e.g. usefull for maps

0.059     2015-01-31 19:38:24+01:00 Europe/Berlin


    - ScanGate job file in XML format are ingested in DigiTool.

0.058     2015-01-29 19:14:13+01:00 Europe/Berlin

    - JPEG 2000 conversion is implemented with a comand line interface (CLI)

0.057     2014-12-06 13:47:45+01:00 Europe/Berlin

    - Deactivate resolution correction

0.055     2014-11-29 15:17:05+01:00 Europe/Berlin

    - For the default case, 1st page is labeled 1 and so on, no page label info
      is saved in PDF format. When page label info is missing for document type
      "thesis" page labels are calculated.    

0.055     2014-11-28 21:50:34+01:00 Europe/Berlin

    - SRU Errors are captured with a error message

0.054     2014-06-29 16:26:54+02:00 Europe/Berlin

    - log level set for Remedi affects now the creation of the footer too   

0.053     2014-06-28 16:26:56+02:00 Europe/Berlin

    - broken logo files for grayscale images are fixed