@@ -2,6 +2,8 @@ Revision history for perl module Remedi
 
 {{$NEXT}}
 
+    - Adapt JPEG 2000 conversion to the logging role
+
 0.065     2015-04-25 12:55:44+02:00 Europe/Berlin
 
     - Add log_level as parameter again after factoring out 
